unpackaged/main/default/objects/Hello__c/fields/hello1__c.field-meta.xml
<CustomField>
    <fullName>hello1__c</fullName>
    <label>hello1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>