unpackaged/main/default/objects/Hello__c/fields/hello2__c.field-meta.xml
<CustomField>
    <fullName>hello2__c</fullName>
    <label>hello2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>