unpackaged/main/default/objects/Hello__c/fields/hello3__c.field-meta.xml
<CustomField>
    <fullName>hello3__c</fullName>
    <label>hello3</label>
    <length>1</length>
    <type>Text</type>
</CustomField>